ros1_bridge/robot_ws/log/build_2021-12-14_14-58-46/rqt_example/stdout.log
-- Found ament_cmake: 0.9.9 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found ament_lint_auto: 0.9.6 (/opt/ros/foxy/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the style conventions in PEP 257
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/choi/robot_ws/build/rqt_example
-- Install configuration: ""
-- Execute custom install script
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/pythonpath.sh
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/pythonpath.dsv
-- Symlinking: /home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/__init__.py
-- Symlinking: /home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples.py
-- Symlinking: /home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples_widget.py
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/plugin.xml
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/lab.png
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/logo.png
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/resource.qrc
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/resource/rqt_example.ui
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/launch/turtlesim.launch.py
-- Symlinking: /home/choi/robot_ws/install/rqt_example/lib/rqt_example/rqt_example
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/ament_index/resource_index/package_run_dependencies/rqt_example
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/ament_index/resource_index/parent_prefix_path/rqt_example
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/ament_prefix_path.sh
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/ament_prefix_path.dsv
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/path.sh
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/environment/path.dsv
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.bash
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.sh
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.zsh
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/local_setup.dsv
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/package.dsv
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/ament_index/resource_index/packages/rqt_example
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/cmake/rqt_exampleConfig.cmake
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/cmake/rqt_exampleConfig-version.cmake
-- Symlinking: /home/choi/robot_ws/install/rqt_example/share/rqt_example/package.xml
Listing '/home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example'...
Compiling '/home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples_widget.py'...
***   File "/home/choi/robot_ws/install/rqt_example/lib/python3.8/site-packages/rqt_example/examples_widget.py", line 68
    audio = r.listen(source, timeout = )
                                       ^
SyntaxError: invalid syntax

